added nojekyll, updated url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: CSSE3010Docs
+site_url: https://uqembeddedsys-projects.github.io/sourcelib-docs
 nav:
 - Home: 'index.md'
 - Git: 'git/git.md'
