moved things around

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
 - Git: 'git/git.md'
 - Setup:
     - 'Virtual Machine': 'setup/virtual_machine/virtual_machine.md'
-    - 'Native Linux Setup Installation': 'setup/linux/linux.md'
+    - 'Linux Setup Installation': 'setup/linux/linux.md'
 - Getting Started:
     - 'Blinky': 'getting_started/blinky.md'
 
